src/objects/Homepage_Widget_Layout__c.object
<CustomObject>
    <fields>
        <fullName>Criteria_Filter_Logic__c</fullName>
        <label>Criteria Filter Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Criteria__c</fullName>
        <label>Criteria</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Displaying_Application_Status__c</fullName>
        <label>Displaying Application Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DO NOT change value here</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field_Reference__c</fullName>
        <label>Field Reference</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Grid_Data_Initial_Size__c</fullName>
        <label>Grid Data Initial Size</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Grid_Data__c</fullName>
        <label>Grid Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Grid_Width__c</fullName>
        <label>Grid Width</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Homepage_Template_Preview__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Homepage Template Preview</label>
        <referenceTo>Homepage_Template__c</referenceTo>
        <relationshipLabel>Homepage Layouts</relationshipLabel>
        <relationshipName>Homepage_Layouts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Catalog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Catalog</label>
        <referenceTo>Program_Catalog__c</referenceTo>
        <relationshipName>Homepage_Widget_Layouts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TestDate__c</fullName>
        <label>TestDate</label>
        <type>Date</type>
    </fields>
    <label>Homepage Layout</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Field_Reference__c</columns>
        <columns>Displaying_Application_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Homepage Widget Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Homepage Layouts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>